# handler/list.go
@@ -12,7 +12,6 @@ type getAllListsResponse struct {
 }
 
 // @Summary Get All ToDo List
-// @Security ApiKeyAuth
 // @Tags list
 // @Description Getting ALl ToDo List
 // @ID get-all-list
@@ -23,6 +22,7 @@ type getAllListsResponse struct {
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /api/list [get]
+// @Security BearerAuth
 func (h *Handler) getList(c *gin.Context) {
 	//userId, err := GetUserId(c)
 	//if err != nil {
@@ -41,7 +41,6 @@ func (h *Handler) getList(c *gin.Context) {
 }
 
 // @Summary Create ToDo List
-// @Security ApiKeyAuth
 // @Tags list
 // @Description Create ToDo List
 // @ID create-list
@@ -53,6 +52,7 @@ func (h *Handler) getList(c *gin.Context) {
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /api/list [post]
+// @Security BearerAuth
 func (h *Handler) createList(c *gin.Context) {
 	var itemList structs.ToDo
 
@@ -71,7 +71,6 @@ func (h *Handler) createList(c *gin.Context) {
 }
 
 // @Summary Get ToDo List
-// @Security ApiKeyAuth
 // @Tags list
 // @Description Get Certain ToDo List By Id
 // @ID get-list-by-id
@@ -83,6 +82,7 @@ func (h *Handler) createList(c *gin.Context) {
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /api/list/{id} [get]
+// @Security BearerAuth
 func (h *Handler) getListByID(c *gin.Context) {
 	itemId, _ := strconv.Atoi(c.Param("id"))
 
@@ -95,7 +95,6 @@ func (h *Handler) getListByID(c *gin.Context) {
 }
 
 // @Summary Update ToDo List
-// @Security ApiKeyAuth
 // @Tags list
 // @Description Update ToDo List By Id
 // @ID update-list
@@ -108,6 +107,7 @@ func (h *Handler) getListByID(c *gin.Context) {
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /api/list/{id} [put]
+// @Security BearerAuth
 func (h *Handler) updateList(c *gin.Context) {
 	itemId, _ := strconv.Atoi(c.Param("id"))
 
@@ -125,7 +125,6 @@ func (h *Handler) updateList(c *gin.Context) {
 }
 
 // @Summary Delete ToDo List
-// @Security ApiKeyAuth
 // @Tags list
 // @Description Delete Certain ToDo List By Id
 // @ID delete-list
@@ -137,6 +136,7 @@ func (h *Handler) updateList(c *gin.Context) {
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /api/list/{id} [delete]
+// @Security BearerAuth
 func (h *Handler) deleteList(c *gin.Context) {
 	itemId, _ := strconv.Atoi(c.Param("id"))
 
