# structs/todoStruct.go
@@ -19,7 +19,13 @@ type ToDoItem struct {
 	Id          int    `json:"id" db:"id"`
 	Title       string `json:"title" db:"title" binding:"required"`
 	Description string `json:"description" db:"description"`
-	Done        bool   `json:"done" db:"done"`
+	Done        bool   `default:"false" json:"done" db:"done"`
+}
+
+type ToDoItemAdd struct {
+	Title       string `json:"title" db:"title" binding:"required"`
+	Description string `json:"description" db:"description"`
+	Done        bool   `default:"false" json:"done" db:"done"`
 }
 
 type ListToDoItems struct {
